src/parsing/antlr_generated/QuerycatParser.py
# Generated from grammars/Querycat.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class QuerycatParser(Parser):

    grammarFileName = "Querycat.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'SELECT'",
        "'{'",
        "'}'",
        "'FROM'",
        "'WHERE'",
        "'ORDER'",
        "'BY'",
        "'ASC'",
        "'DESC'",
        "'LIMIT'",
        "'OFFSET'",
        "'.'",
        "'OPTIONAL'",
        "'UNION'",
        "'MINUS'",
        "'VALUES'",
        "'FILTER'",
        "';'",
        "','",
        "'|'",
        "'/'",
        "'?'",
        "'*'",
        "'+'",
        "'('",
        "')'",
        "'-'",
        "'AS'",
        "'DISTINCT'",
        "'COUNT'",
        "'SUM'",
        "'AVG'",
        "'MIN'",
        "'MAX'",
        "'||'",
        "'&&'",
        "'='",
        "'!='",
        "'<'",
        "'>'",
        "'<='",
        "'>='",
        "'true'",
        "'false'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "SCHEMA_MORPHISM",
        "SCHEMA_IDENTIFIER",
        "BLANK_NODE_LABEL",
        "VAR1",
        "VAR2",
        "INTEGER",
        "DECIMAL",
        "DOUBLE",
        "INTEGER_POSITIVE",
        "DECIMAL_POSITIVE",
        "DOUBLE_POSITIVE",
        "INTEGER_NEGATIVE",
        "DECIMAL_NEGATIVE",
        "DOUBLE_NEGATIVE",
        "EXPONENT",
        "STRING_LITERAL1",
        "STRING_LITERAL2",
        "STRING_LITERAL_LONG1",
        "STRING_LITERAL_LONG2",
        "ECHAR",
        "NIL",
        "ANON",
        "PN_CHARS_U",
        "VARNAME",
        "PN_PREFIX",
        "PN_LOCAL",
        "WS",
    ]

    RULE_query = 0
    RULE_selectQuery = 1
    RULE_subSelect = 2
    RULE_selectClause = 3
    RULE_selectGraphPattern = 4
    RULE_fromClause = 5
    RULE_whereClause = 6
    RULE_solutionModifier = 7
    RULE_limitOffsetClauses = 8
    RULE_orderClause = 9
    RULE_orderCondition = 10
    RULE_limitClause = 11
    RULE_offsetClause = 12
    RULE_groupGraphPattern = 13
    RULE_triplesBlock = 14
    RULE_graphPatternNotTriples = 15
    RULE_optionalGraphPattern = 16
    RULE_groupOrUnionGraphPattern = 17
    RULE_inlineData = 18
    RULE_dataBlock = 19
    RULE_dataBlockValue = 20
    RULE_filter_ = 21
    RULE_constraint = 22
    RULE_selectTriples = 23
    RULE_triplesSameSubject = 24
    RULE_propertyListNotEmpty = 25
    RULE_propertyList = 26
    RULE_objectList = 27
    RULE_object_ = 28
    RULE_verb = 29
    RULE_schemaMorphismOrPath = 30
    RULE_pathAlternative = 31
    RULE_pathSequence = 32
    RULE_pathWithMod = 33
    RULE_pathMod = 34
    RULE_pathPrimary = 35
    RULE_schemaMorphism = 36
    RULE_primaryMorphism = 37
    RULE_dualMorphism = 38
    RULE_graphNode = 39
    RULE_varOrTerm = 40
    RULE_var_ = 41
    RULE_constantTerm = 42
    RULE_aggregationTerm = 43
    RULE_distinctModifier = 44
    RULE_aggregationFunc = 45
    RULE_expression = 46
    RULE_conditionalOrExpression = 47
    RULE_conditionalAndExpression = 48
    RULE_valueLogical = 49
    RULE_relationalExpression = 50
    RULE_expressionPart = 51
    RULE_primaryExpression = 52
    RULE_brackettedExpression = 53
    RULE_numericLiteral = 54
    RULE_numericLiteralUnsigned = 55
    RULE_numericLiteralPositive = 56
    RULE_numericLiteralNegative = 57
    RULE_booleanLiteral = 58
    RULE_string_ = 59
    RULE_blankNode = 60

    ruleNames = [
        "query",
        "selectQuery",
        "subSelect",
        "selectClause",
        "selectGraphPattern",
        "fromClause",
        "whereClause",
        "solutionModifier",
        "limitOffsetClauses",
        "orderClause",
        "orderCondition",
        "limitClause",
        "offsetClause",
        "groupGraphPattern",
        "triplesBlock",
        "graphPatternNotTriples",
        "optionalGraphPattern",
        "groupOrUnionGraphPattern",
        "inlineData",
        "dataBlock",
        "dataBlockValue",
        "filter_",
        "constraint",
        "selectTriples",
        "triplesSameSubject",
        "propertyListNotEmpty",
        "propertyList",
        "objectList",
        "object_",
        "verb",
        "schemaMorphismOrPath",
        "pathAlternative",
        "pathSequence",
        "pathWithMod",
        "pathMod",
        "pathPrimary",
        "schemaMorphism",
        "primaryMorphism",
        "dualMorphism",
        "graphNode",
        "varOrTerm",
        "var_",
        "constantTerm",
        "aggregationTerm",
        "distinctModifier",
        "aggregationFunc",
        "expression",
        "conditionalOrExpression",
        "conditionalAndExpression",
        "valueLogical",
        "relationalExpression",
        "expressionPart",
        "primaryExpression",
        "brackettedExpression",
        "numericLiteral",
        "numericLiteralUnsigned",
        "numericLiteralPositive",
        "numericLiteralNegative",
        "booleanLiteral",
        "string_",
        "blankNode",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    T__20 = 21
    T__21 = 22
    T__22 = 23
    T__23 = 24
    T__24 = 25
    T__25 = 26
    T__26 = 27
    T__27 = 28
    T__28 = 29
    T__29 = 30
    T__30 = 31
    T__31 = 32
    T__32 = 33
    T__33 = 34
    T__34 = 35
    T__35 = 36
    T__36 = 37
    T__37 = 38
    T__38 = 39
    T__39 = 40
    T__40 = 41
    T__41 = 42
    T__42 = 43
    T__43 = 44
    SCHEMA_MORPHISM = 45
    SCHEMA_IDENTIFIER = 46
    BLANK_NODE_LABEL = 47
    VAR1 = 48
    VAR2 = 49
    INTEGER = 50
    DECIMAL = 51
    DOUBLE = 52
    INTEGER_POSITIVE = 53
    DECIMAL_POSITIVE = 54
    DOUBLE_POSITIVE = 55
    INTEGER_NEGATIVE = 56
    DECIMAL_NEGATIVE = 57
    DOUBLE_NEGATIVE = 58
    EXPONENT = 59
    STRING_LITERAL1 = 60
    STRING_LITERAL2 = 61
    STRING_LITERAL_LONG1 = 62
    STRING_LITERAL_LONG2 = 63
    ECHAR = 64
    NIL = 65
    ANON = 66
    PN_CHARS_U = 67
    VARNAME = 68
    PN_PREFIX = 69
    PN_LOCAL = 70
    WS = 71

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class QueryContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectQuery(self):
            return self.getTypedRuleContext(QuerycatParser.SelectQueryContext, 0)

        def EOF(self):
            return self.getToken(QuerycatParser.EOF, 0)

        def getRuleIndex(self):
            return QuerycatParser.RULE_query

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterQuery"):
                listener.enterQuery(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitQuery"):
                listener.exitQuery(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitQuery"):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)

    def query(self):

        localctx = QuerycatParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.selectQuery()
            self.state = 123
            self.match(QuerycatParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SelectQueryContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectClause(self):
            return self.getTypedRuleContext(QuerycatParser.SelectClauseContext, 0)

        def whereClause(self):
            return self.getTypedRuleContext(QuerycatParser.WhereClauseContext, 0)

        def solutionModifier(self):
            return self.getTypedRuleContext(QuerycatParser.SolutionModifierContext, 0)

        def fromClause(self):
            return self.getTypedRuleContext(QuerycatParser.FromClauseContext, 0)

        def getRuleIndex(self):
            return QuerycatParser.RULE_selectQuery

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSelectQuery"):
                listener.enterSelectQuery(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSelectQuery"):
                listener.exitSelectQuery(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSelectQuery"):
                return visitor.visitSelectQuery(self)
            else:
                return visitor.visitChildren(self)

    def selectQuery(self):

        localctx = QuerycatParser.SelectQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_selectQuery)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.selectClause()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 4:
                self.state = 126
                self.fromClause()

            self.state = 129
            self.whereClause()
            self.state = 130
            self.solutionModifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SubSelectContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectQuery(self):
            return self.getTypedRuleContext(QuerycatParser.SelectQueryContext, 0)

        def getRuleIndex(self):
            return QuerycatParser.RULE_subSelect

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSubSelect"):
                listener.enterSubSelect(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSubSelect"):
                listener.exitSubSelect(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSubSelect"):
                return visitor.visitSubSelect(self)
            else:
                return visitor.visitChildren(self)

    def subSelect(self):

        localctx = QuerycatParser.SubSelectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_subSelect)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.selectQuery()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SelectClauseContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectGraphPattern(self):
            return self.getTypedRuleContext(QuerycatParser.SelectGraphPatternContext, 0)

        def getRuleIndex(self):
            return QuerycatParser.RULE_selectClause

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSelectClause"):
                listener.enterSelectClause(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSelectClause"):
                listener.exitSelectClause(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSelectClause"):
                return visitor.visitSelectClause(self)
            else:
                return visitor.visitChildren(self)

    def selectClause(self):

        localctx = QuerycatParser.SelectClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_selectClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(QuerycatParser.T__0)
            self.state = 135
            self.selectGraphPattern()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SelectGraphPatternContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectTriples(self):
            return self.getTypedRuleContext(QuerycatParser.SelectTriplesContext, 0)

        def getRuleIndex(self):
            return QuerycatParser.RULE_selectGraphPattern

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSelectGraphPattern"):
                listener.enterSelectGraphPattern(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSelectGraphPattern"):
                listener.exitSelectGraphPattern(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSelectGraphPattern"):
                return visitor.visitSelectGraphPattern(self)
            else:
                return visitor.visitChildren(self)

    def selectGraphPattern(self):

        localctx = QuerycatParser.SelectGraphPatternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_selectGraphPattern)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(QuerycatParser.T__1)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la - 30)) & ~0x3F) == 0 and ((1 << (_la - 30)) & 106837205023) != 0:
                self.state = 138
                self.selectTriples()

            self.state = 141
            self.match(QuerycatParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FromClauseContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SCHEMA_IDENTIFIER(self):
            return self.getToken(QuerycatParser.SCHEMA_IDENTIFIER, 0)

        def getRuleIndex(self):
            return QuerycatParser.RULE_fromClause

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFromClause"):
                listener.enterFromClause(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFromClause"):
                listener.exitFromClause(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitFromClause"):
                return visitor.visitFromClause(self)
            else:
                return visitor.visitChildren(self)

    def fromClause(self):

        localctx = QuerycatParser.FromClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fromClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(QuerycatParser.T__3)
            self.state = 144
            self.match(QuerycatParser.SCHEMA_IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WhereClauseContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def groupGraphPattern(self):
            return self.getTypedRuleContext(QuerycatParser.GroupGraphPatternContext, 0)

        def getRuleIndex(self):
            return QuerycatParser.RULE_whereClause

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterWhereClause"):
                listener.enterWhereClause(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitWhereClause"):
                listener.exitWhereClause(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitWhereClause"):
                return visitor.visitWhereClause(self)
            else:
                return visitor.visitChildren(self)

    def whereClause(self):

        localctx = QuerycatParser.WhereClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_whereClause)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 5:
                self.state = 146
                self.match(QuerycatParser.T__4)

            self.state = 149
            self.groupGraphPattern()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SolutionModifierContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def orderClause(self):
            return self.getTypedRuleContext(QuerycatParser.OrderClauseContext, 0)

        def limitOffsetClauses(self):
            return self.getTypedRuleContext(QuerycatParser.LimitOffsetClausesContext, 0)

        def getRuleIndex(self):
            return QuerycatParser.RULE_solutionModifier

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSolutionModifier"):
                listener.enterSolutionModifier(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSolutionModifier"):
                listener.exitSolutionModifier(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSolutionModifier"):
                return visitor.visitSolutionModifier(self)
            else:
                return visitor.visitChildren(self)

    def solutionModifier(self):

        localctx = QuerycatParser.SolutionModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_solutionModifier)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 6:
                self.state = 151
                self.orderClause()

            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 10 or _la == 11:
                self.state = 154
                self.limitOffsetClauses()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LimitOffsetClausesContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def limitClause(self):
            return self.getTypedRuleContext(QuerycatParser.LimitClauseContext, 0)

        def offsetClause(self):
            return self.getTypedRuleContext(QuerycatParser.OffsetClauseContext, 0)

        def getRuleIndex(self):
            return QuerycatParser.RULE_limitOffsetClauses

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLimitOffsetClauses"):
                listener.enterLimitOffsetClauses(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLimitOffsetClauses"):
                listener.exitLimitOffsetClauses(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLimitOffsetClauses"):
                return visitor.visitLimitOffsetClauses(self)
            else:
                return visitor.visitChildren(self)

    def limitOffsetClauses(self):

        localctx = QuerycatParser.LimitOffsetClausesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_limitOffsetClauses)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.state = 157
                self.limitClause()
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 11:
                    self.state = 158
                    self.offsetClause()

                pass
            elif token in [11]:
                self.state = 161
                self.offsetClause()
                self.state = 163
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 10:
                    self.state = 162
                    self.limitClause()

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OrderClauseContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def orderCondition(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(QuerycatParser.OrderConditionContext)
            else:
                return self.getTypedRuleContext(QuerycatParser.OrderConditionContext, i)

        def getRuleIndex(self):
            return QuerycatParser.RULE_orderClause

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterOrderClause"):
                listener.enterOrderClause(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitOrderClause"):
                listener.exitOrderClause(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOrderClause"):
                return visitor.visitOrderClause(self)
            else:
                return visitor.visitChildren(self)

    def orderClause(self):

        localctx = QuerycatParser.OrderClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_orderClause)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(QuerycatParser.T__5)
            self.state = 168
            self.match(QuerycatParser.T__6)
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 169
                self.orderCondition()
                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3F) == 0 and ((1 << _la) & 844424963687168) != 0):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OrderConditionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def brackettedExpression(self):
            return self.getTypedRuleContext(
                QuerycatParser.BrackettedExpressionContext, 0
            )

        def constraint(self):
            return self.getTypedRuleContext(QuerycatParser.ConstraintContext, 0)

        def var_(self):
            return self.getTypedRuleContext(QuerycatParser.Var_Context, 0)

        def getRuleIndex(self):
            return QuerycatParser.RULE_orderCondition

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterOrderCondition"):
                listener.enterOrderCondition(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitOrderCondition"):
                listener.exitOrderCondition(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOrderCondition"):
                return visitor.visitOrderCondition(self)
            else:
                return visitor.visitChildren(self)

    def orderCondition(self):
